--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,11 @@
     ],
     "python.editor.defaultFormatter": "ms-python.black-formatter",
     "python.terminal.activateEnvironment": false,
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": false,
+    "python.languageServer": "Pylance",
+    "python.analysis.inlayHints.functionReturnTypes": true,
+    "python.analysis.inlayHints.callArgumentNames": true,
+    "python.analysis.inlayHints.variableTypes": true,
+    "python.analysis.typeCheckingMode": "basic",
   }
 }
